--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
+	"engines": {
+		"node":"20.x"
+	},
 	"type": "module",
 	"dependencies": {
 		"@auth/sveltekit": "^1.4.1",
+		"@sveltejs/adapter-vercel": "^5.4.1",
 		"html-to-image": "^1.11.11"
 	}
 }
