--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
 		"vitest": "^1.2.0"
 	},
 	"engines": {
-		"node":"20.x"
+		"node": "20.x"
 	},
 	"type": "module",
 	"dependencies": {
 		"@auth/sveltekit": "^1.4.1",
 		"@sveltejs/adapter-vercel": "^5.4.1",
+		"@vercel/analytics": "^1.3.1",
 		"html-to-image": "^1.11.11"
 	}
 }
