--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@auth/sveltekit": "^1.4.1",
 		"@sveltejs/adapter-vercel": "^5.4.1",
 		"@vercel/analytics": "^1.3.1",
+		"dotenv": "^16.4.5",
 		"html-to-image": "^1.11.11"
 	}
 }
